--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ button.secondary:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/images/charizard-card-bg.jpg');
+    background-image: url('/images/herosectionbg.png');
     background-size: cover;
     background-position: center 30%;
     opacity: 0.2;
